# django-skeleton

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
hotel/: admin.py  models.py  serializers.py  services.py  tests.py  views.py
hotel/migrations/: 0001_initial.py
tests/: conftest.py  test_bookings_conflict.py  test_bookings_create.py  test_bookings_delete.py  test_bookings_list.py  test_bookings_room_not_found.py  test_rooms.py  test_rooms_list.py
